k8s/blue-app.yml
apiVersion: v1
kind: Service
metadata:
  name: blue-app-svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app: blue-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
        - name: blue-app
          image: "hashicorp/http-echo"
          args:
            - -listen=:8080
            - --text="I am blue"
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
