k8s/green-app.yml
apiVersion: v1
kind: Service
metadata:
  name: green-app-svc
spec:
  type: ClusterIP
  ports:
    - port: 8081
      protocol: TCP
      name: http
  selector:
    app: green-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
        - name: green-app
          image: "hashicorp/http-echo"
          args:
            - -listen=:8081
            - --text="I am green"
          ports:
            - name: http
              protocol: TCP
              containerPort: 8081
